Memory optimizations- pool URLs and return constant             values for common BigInteger and BigDecimal objects.